...
    <string name="addI">Add Instruments</string>
    <string name="addphoto">Add A Photo!</string>
    <string name="bio">Personal Biography</string>
    <string name="addjams">Add My Jams</string>
    <string name="prof_jam">Play My Jam</string>
    <string name="login">Login</string>
    <string name="register">Register Here</string>
    <string name="reg">Register</string>
    <string name="sup">Sign Up</string>
    <string name="free">It\'s Free!</string>
    <string name="def">Nothing to play...</string>
    <string name="prof_jam_display">Profile Jam:</string>
    <string name="uname">Username</string>
    <string name="save">Save</string>
    <string name="exp_lvl">Years of Experience</string>
    <string name="title_activity_instrument_select">Select an Instrument</string>
    <string name="title_activity_display_userpro">Display User</string>
    <string name="title_activity_swap_view">SwapView</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Log out</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_navigation_bar">NavigationBar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="delete">Delete Account</string>
    <string name="verify">Verify user info to delete your account</string>
    <string name="abt">About Me</string>
    <string name="frlist">Friend List</string>
    <string name="rfind">Recent find</string>
    <string name="msg">Message</string>
    <string name="sent">Sent</string>
    <string name="nxt">Next</string>
    <string name="abtblurb">Tell us about yourself. Who\'s your favorite artist? What\'s your
        favorite genre? Other Jammers can\'t wait to know more about you!</string>
    <string name="expblurb">Brag about yourself! Rate yourself based on your years of experience
        jammin\'! And beginners, don\'t worry! There are plenty of beginners on Jam With Me
        .</string>
    <string name="confirm">Confirm</string>
...
